# starsavior-extractor

./: .gitignore  README.md  index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: mod.rs  state.rs
apps/desktop/src/api/: types.ts
engine/: decrypt_templets_v2.py  extract_const_templet.py  main.py  requirements.txt  run_banner_discover.py
engine/hooks/: bytearray_scan.js  capture_decrypt.js  direct_read.js  dump_all.js  dump_all_v2.js  equip_substats.js  find_ab_fields.js  find_key.js  hook_banner_dates.js  hook_banners.js  hook_bitblend.js  hook_discover_banner.js  hook_filename.js  main.js  probe_buffer.js  test_invoke.js  test_invoke2.js  test_invoke3.js  test_invoke4.js  test_invoke5.js  test_minimal.js  type_scan.js
engine/src/: asset_extractor.py  bundle_decryptor.py  catalog_parser.py  extractor.py
src/: styles.css
src-tauri/: tauri.conf.json
src-tauri/src/commands/: extract.rs  process.rs  types.rs
src/api/: desktopApi.ts
src/hooks/: useExtraction.ts
